log
Mon 15 Aug 2022 12:52:25 AM UTC: 
 tests:  0|7
total_score: 0/70
2ac27de
Mon 15 Aug 2022 12:59:15 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ac5495f
Mon 15 Aug 2022 01:13:19 AM UTC: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:4: error: conversion to non-scalar type requested
   81 |    Vector* v = (Vector)malloc(sizeof(Vector));
      |    ^~~~~~
exercises.c:82:12: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   82 |   v->datos=(int) malloc (sizeof(int)*n);
      |            ^
exercises.c:82:11: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   82 |   v->datos=(int) malloc (sizeof(int)*n);
      |           ^
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
8214340
